samples/_failures_safe/1761180899_738bb1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6e08c3a9.c: In function ‘main’:
./samples/SAFE/__tmp_6e08c3a9.c:182:20: error: missing terminating " character
  182 |             printf("Processing
      |                    ^~~~~~~~~~~
./samples/SAFE/__tmp_6e08c3a9.c:182:13: error: expected expression at end of input
  182 |             printf("Processing
      |             ^~~~~~
./samples/SAFE/__tmp_6e08c3a9.c:182:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6e08c3a9.c:182:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6e08c3a9.c:182:13: error: expected declaration or statement at end of input
